# fileMonitor

./: CMakeLists.txt  main.c
include/: CMakeLists.txt  helper.h  rFileHandler.c  rFileHandler.h
libriary/include/: helper.c
src/: main.c
